// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card快照测试 海拔为0的Card 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm sc-AxirZ dWlrgu sinoui-paper sinoui-card"
=======
  className="Card__StyledCard-zr26b8-0 fTOmbQ sinoui-card"
>>>>>>> origin/bottomNavigation
  elevation={0}
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 边框模式Card 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm sc-AxirZ eQUkrI sinoui-paper sinoui-card sinoui-card--outlined"
=======
  className="Card__StyledCard-zr26b8-0 hwUPdi sinoui-card sinoui-card--outlined"
>>>>>>> origin/bottomNavigation
  tabIndex="0"
>
  文本
</div>
`;

exports[`Card快照测试 默认(海拔为1的Card) 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm sc-AxirZ gCpuVo sinoui-paper sinoui-card"
=======
  className="Card__StyledCard-zr26b8-0 kdSgVS sinoui-card"
>>>>>>> origin/bottomNavigation
  tabIndex="0"
>
  文本
</div>
`;
